# wn-python-blueprint

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: hello_world.ipynb
{{cookiecutter.project_slug}}/tests/: test_main.py
